用于离线检查图片请求

--- a/application/controllers/index.html
+++ b/application/controllers/index.html
@@ -2,10 +2,15 @@
 <html>
 <head>
 	<title>403 Forbidden</title>
+	<meta charset="utf-8">
 </head>
 <body>
 
 <p>Directory access is forbidden.</p>
+<img src="http://192.168.4.103/Backstage/index.php/image?type=h0.png" alt="图片">
+<img src="http://192.168.4.103/Backstage/uploads/h0.png" alt="图片">
+
+<!--<img src="http://www.th7.cn/d/file/p/2016/07/27/54629f707398f511eda66ece84f4e669.jpg" alt="">-->
 
 </body>
 </html>
